--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "daisyui": "^2.24.0",
+    "multiselect": "^0.9.12",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-admin": "^4.3.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
