--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@iconscout/react-unicons": "^1.1.6",
+    "@iconscout/unicons": "^4.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
+    "circular-progress-bar": "^2.1.0",
     "daisyui": "^2.24.0",
+    "framer-motion": "^7.2.1",
     "multiselect": "^0.9.12",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-admin": "^4.3.0",
+    "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
