--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hubspot/api-client": "^7.1.2",
     "@iconscout/react-unicons": "^1.1.6",
     "@iconscout/unicons": "^4.0.1",
+    "@mui/material": "^5.10.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
